feat: add styles

--- a/index.html
+++ b/index.html
@@ -10,86 +10,86 @@
 <body>
 
     <header class="header container">
-        <div class="header__personal-info">
-            <h1 class="header__name">ANNA <br> ZVERINTSEVA</h1>
-            <span class="header__vacancy">FRONTEND DEVELOPER</span>
-        </div>
-        <div class="header__contacts">
-        <div class="header__contact">
-            <div class="header__wrapper-contact">
-                <h3 class="header__title-contact">PHONE</h3>
-                +12345678
+        <div class="header__wrapper">
+            <div class="header__personal-info">
+                <h1 class="header__name">АННА <br> ЗВЕРИНЦЕВА</h1>
+                <span class="header__vacancy">FRONTEND DEVELOPER</span>
             </div>
-            <img class="header__img" src="./assets/svg/phone.svg" width="50" alt="icon phone">
-        </div>
-        <div class="header__contact">
-            <div class="header__wrapper-contact">
-                <h3 class="header__title-contact">MAIL</h3>
-                aaaa@mail.ru
+            <div class="header__contacts">
+            <div class="header__contact">
+                <div class="header__wrapper-contact">
+                    <h3 class="header__title-contact">ТЕЛЕФОН</h3>
+                    +12345678
+                </div>
+                <img class="header__img" src="./assets/svg/phone.svg" width="50" alt="icon phone">
             </div>
-            <img class="header__img" src="./assets/svg/mail.svg" width="50" alt="icon mail">
-        </div>
-        <div class="header__contact">
-            <div class="header__wrapper-contact">
-                <h3 class="header__title-contact">ADDRESS</h3>
-                Russia, Togliatti
+            <div class="header__contact">
+                <div class="header__wrapper-contact">
+                    <h3 class="header__title-contact">ПОЧТА</h3>
+                    aaaa@mail.ru
+                </div>
+                <img class="header__img" src="./assets/svg/mail.svg" width="50" alt="icon mail">
             </div>
-            <img class="header__img" src="./assets/svg/map-marker.svg" width="50" alt="icon map marker">
+            <div class="header__contact">
+                <div class="header__wrapper-contact">
+                    <h3 class="header__title-contact">АДРЕС</h3>
+                    Россия, Тольятти
+                </div>
+                <img class="header__img" src="./assets/svg/map-marker.svg" width="50" alt="icon map marker">
+            </div>
         </div>
     </div>
     <h2 class="header__title">RESUME</h2>
     </header>
 
     <section class="main container">
-        <div class="main__education">
-            <div class="main__wrapper-title">
-                <h2 class="main__title-education">EDUCATION</h2>
-                <img class="main__img img" src="./assets/svg/education.svg" width="50" alt="icon education">
+        <div class="wrapper-content">
+            <div class="wrapper-content__wrapper-title">
+                <h2 class="wrapper-content__title">ОБРАЗОВАНИЕ</h2>
+                <img class="wrapper-content__img" src="./assets/svg/education.svg" width="50" alt="icon education">
             </div>
             <ul class="main__education-list">
                 <li class="main__education-type">
                     2016
-                    <h2 class="main__education-type-title">RGSU</h2>
-                    finance and credit
+                    <h2 class="main__education-type-title">Российский государственный социальный университет, Москва</h2>
+                    финансы и кредит
                 </li>
                 <li class="main__education-type">
-                    March 2022
+                    Март 2022
                     <h2 class="main__education-type-title">Rollings Scopes School</h2>
                     JavaScript/Front-end
                 </li>
                 <li class="main__education-type">
-                    September 2022
+                    Сентябрь 2022
                     <h2 class="main__education-type-title">Rollings Scopes School</h2>
                     Angular
                 </li>
             </ul>
         </div>
-        <div class="main__about-me">
-            <div class="main__wrapper-title">
-                <h2 class="main__title">ABOUT ME</h2>
-                <img class="main__img img-white" src="./assets/svg/profile.svg" width="50"  alt="icon person">
+        <div class="wrapper-content-white">
+            <div class="wrapper-content-white__wrapper-title">
+                <h2 class="wrapper-content-white__title">Обо мне</h2>
+                <img class="wrapper-content-white__img" src="./assets/svg/profile.svg" width="50"  alt="icon person">
             </div>
             <div class="main__text">
-                <span class="main__text-start">Hi, my name is Anna</span>
+                <span class="main__text-start">Привет, меня зовут Анна</span>
                 <br>
-                I am an enthusiastic Frontend developer with little freelance experience, where I have developed several websites using static html layout, css, javascript. 
-                Basically, I get development experience by setting tasks for myself and completing them.
-                I also gained a lot of experience after studying at the RS school, at the frontend development course.
-                Worked on projects using javascript, typescript, angular, react.
-                Here I learned to understand someone else's code while working on team projects, which I consider a very important skill,
-                because I want to work in a team. 
-                I am a responsible person and I am serious about solving the tasks set for myself. 
-                "Never give up!" my slogan for life is no matter what difficulties you have to face.
-                
+                я увлеченный Frontend разработчик, имеющий небольшой опыт работы на фрилансе, где разработала несколько сайтов с использованием статичной html верстки, css, javascript. 
+                В основном опыт разработки получаю ставя перед собой задачи и выполняя их.
+                Так же получила большой опыт после прохождения обучения в школе The Rolling Scopes School, на курсе JavaScript/Front-end.
+                Работала над проектами используя javascript, typescript,  angular, react.
+                Здесь я научилась разбираться в чужом коде, работая над командными проектами, что считаю очень важным навыком,
+                так как хочу работать в команде. 
+                Я ответственный человек и серьезно подхожу к решению поставленных перед собой задач. 
+                "Никогда не сдаваться!" мой лозунг по жизни с какими бы трудностями не пришлось столкнуться.
             </div>
         </div>
     </section>
 <section class="works-skills container">
-<div class="works-skills__skills">
-    <div class="works-skills__skills-professional">
-        <div  class="works-skills__title-skills wrapper-title">
-            <h2 class="works-skills__title wrapper-title__title-black">Skills</h2>
-            <img class="works-skills__img-skills" src="./assets/svg/skills.svg" width="50" alt="icon skills">
+    <div class="wrapper-content">
+        <div  class="wrapper-content__wrapper-title">
+            <h2 class="wrapper-content__title">НАВЫКИ</h2>
+            <img class="wrapper-content__img" src="./assets/svg/skills.svg" width="50" alt="icon skills">
         </div>
         <ul class="works-skills__list">
             <li class="works-skills__skill">JavaScript</li>
@@ -107,53 +107,70 @@
         </ul> 
 
 
-    </div>
-    <div class="works-skills__language">
-        <div  class="works-skills__wrapper-title wrapper-title">
-            <h2 class="works-skills__title wrapper-title__title-black">Language</h2>
-            <img class="works-skills__img-skills" src="./assets/svg/language.svg" width="50" alt="icon skills">
+        <div  class="wrapper-content__wrapper-title">
+            <h2 class="wrapper-content__title">ЯЗЫКИ</h2>
+            <img class="wrapper-content__img" src="./assets/svg/language.svg" width="50" alt="icon skills">
         </div>
         <ul class="works-skills__list">
-            <li  class="works-skills__skill works-skills__skill_language">English (B2)</li>
-            <li  class="works-skills__skill works-skills__skill_language">Russian native</li>
+            <li  class="works-skills__skill works-skills__skill_language">Английский (B2)</li>
+            <li  class="works-skills__skill works-skills__skill_language">Русский</li>
         </ul>
 
-    </div>
-</div>
-<div class="works-skills__projects">
-    <div class="works-skills__wrapper-title wrapper-title">
-        <h2 class="works-skills__title wrapper-title__title-white">Projects</h2>
-        <img class="works-skills__img-project" src="./assets/svg/project.svg" width="50" alt="icon projects">
-    </div>
-    <div class="works-skills__wrapper-projects">
-        <ul class="works-skills__projects-list">
-            <li class="works-skills__project">
-                <h2 class="works-skills__project-title">Shelter</h2>
-                <a class="works-skills__project-link" href="https://laluna93.github.io/Shelter/dist/">
-                    <img class="works-skills__project-img" src="./assets/img/shelter320.jpg" alt="image shelter">
-                </a>
-                <h3 class="works-skills__project-text">TypeScritp, Webpack, Eslint</h3>
+        <div class="wrapper-content__wrapper-title">
+            <h2 class="wrapper-content__title">ОПЫТ РАБОТЫ</h2>
+            <img class="wrapper-content__img" src="./assets/svg/work.svg" width="50" alt="icon works">
+        </div>
+        <ul class="works-skills__list works-skills__list_works">
+            <li>
+                <h3>Фрилансер / Frontend-разработчик</h3>
+                Было разработано несколько сайтов адаптированных под мобильные устройства, с использованием javascript, css, html.
             </li>
-            <li class="works-skills__project">
-                <h2 class="works-skills__project-title">Youtube</h2>
-                <a class="works-skills__project-link" href="">
-                    <img class="works-skills__project-img" src="./assets/img/youtube.jpg" alt="image youtube">
-                </a>
-                <h3 class="works-skills__project-text">Angular, TypeScritp, RXJS, NGRX, YouTube Data Api</h3>
+            <li>
+                август 2020
+                <h3>СБЕРБАНК / Специалист технической поддержки</h3>
+                Оказание консультации клиентам по продуктам компании, решение технических вопросов.
             </li>
-            <li class="works-skills__project">
-                <h2 class="works-skills__project-title">Project Management</h2>
-                <a class="works-skills__project-link" href="https://pomakom-rsteam.github.io/project-management-app-team2/">
-                    <img class="works-skills__project-img" src="./assets/img/project-manager.jpg" alt="image project management">
-                </a>
-                <h3 class="works-skills__project-text">Angular, TypeScritp, Angular Material, Ng-Zorro</h3>
+            <li>
+                август 2018
+                <h3>ООО Келли Сервисез Си Ай Эс / Специалист технической поддержки</h3>
+                Оказание консультации клиентам по продуктам компании (модемы, роутеры), решение технических вопросов
             </li>
         </ul>
     </div>
-</div>
+    <div class="wrapper-content-white">
+        <div class="wrapper-content-white__wrapper-title">
+            <h2 class="wrapper-content-white__title">МОИ ПРОЕКТЫ</h2>
+            <img class="wrapper-content-white__img" src="./assets/svg/project.svg" width="50" alt="icon projects">
+        </div>
+        <div class="works-skills__wrapper-projects">
+            <ul class="works-skills__projects-list">
+                <li class="works-skills__project">
+                    <h2 class="works-skills__project-title">Shelter</h2>
+                    <a class="works-skills__project-link" href="https://laluna93.github.io/Shelter/dist/">
+                        <img class="works-skills__project-img" src="./assets/img/shelter320.jpg" alt="image shelter">
+                    </a>
+                    <h3 class="works-skills__project-text">TypeScritp, Webpack, Eslint</h3>
+                </li>
+                <li class="works-skills__project">
+                    <h2 class="works-skills__project-title">Youtube</h2>
+                    <a class="works-skills__project-link" href="">
+                        <img class="works-skills__project-img" src="./assets/img/youtube.jpg" alt="image youtube">
+                    </a>
+                    <h3 class="works-skills__project-text">Angular, TypeScritp, RXJS, NGRX, YouTube Data Api</h3>
+                </li>
+                <li class="works-skills__project">
+                    <h2 class="works-skills__project-title">Project Management</h2>
+                    <a class="works-skills__project-link" href="https://pomakom-rsteam.github.io/project-management-app-team2/">
+                        <img class="works-skills__project-img" src="./assets/img/project-manager.jpg" alt="image project management">
+                    </a>
+                    <h3 class="works-skills__project-text">Angular, TypeScritp, Angular Material, Ng-Zorro</h3>
+                </li>
+            </ul>
+        </div>
+    </div>
 </section>
-    <!-- 
-            <span class="header__text">Hi, my name is Anna</span>
+
+            <!-- <span class="header__text">Hi, my name is Anna</span>
             <br>
             I am an enthusiastic Frontend developer with little freelance experience, where I have developed several websites using static html layout, css, javascript. 
             Basically, I get development experience by setting tasks for myself and completing them.
@@ -172,44 +189,8 @@
             Я ответственный человек и серьезно подхожу к решению поставленных перед собой задач. 
             "Никогда не сдаваться!" мой лозунг по жизни с какими бы трудностями не пришлось столкнуться. -->
             <!-- </div>
-            </div>
-            <div class="language">
-                <h2 class="language__title">Language</h2>
-                <div>English (B2)</div>
-                <div>Russian native</div>
-            </div>
-        </div>
-        <div class="main__right-block">
-            <div class="projects">
-                <h2  class="projects__title">Projects</h2>
-                <div class="projects__wrapper">
-                    <div class="projects__project">
-                        <h2  class="title">Project management</h2>
-                        <a href="https://pomakom-rsteam.github.io/project-management-app-team2/">
-                            <img class="projects__img" src="./assets/img/Projectmanagement.jpg" alt="Project management">
-                        </a>
-                        Angular, TypeScritp, Angular Material, Ng-Zorro
-                    </div>
+            </div> -->
 
-                    <div class="projects__project">
-                        <h2  class="title">Shelter</h2>
-                        <a href="https://laluna93.github.io/Shelter/dist/">
-                            <img class="projects__img" src="./assets/img/shelter.jpg" alt="Project management">
-                        </a>
-                         TypeScritp
-                    </div>
-                    <div class="projects__project">
-                        <h2 class="title">Youtube</h2>
-                        <a href="https://pomakom-rsteam.github.io/project-management-app-team2/">
-                            <img class="projects__img" src="./assets/img/youtube.jpg" alt="Project management">
-                        </a>
-                        Angular, TypeScritp, RXJS, NGRX, YouTube Data Api
-                    </div>
-                 </div>
-                 <div class="projects__git"><a class="projects__link" href="https://github.com/laluna93">My GitHub</a></div>
-            </div>
-        </div>
-    </section> -->
     <script src="./index.js"></script>
 </body>
 
