feat: add style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>MyCv</title>
 </head>
 <body>
-
     <header class="header container">
         <div class="header__wrapper">
             <div class="header__personal-info">
@@ -41,7 +40,6 @@
     </div>
     <h2 class="header__title">RESUME</h2>
     </header>
-
     <section class="main container">
         <div class="wrapper-content">
             <div class="wrapper-content__wrapper-title">
@@ -81,116 +79,91 @@
                 Здесь я научилась разбираться в чужом коде, работая над командными проектами, что считаю очень важным навыком,
                 так как хочу работать в команде. 
                 Я ответственный человек и серьезно подхожу к решению поставленных перед собой задач. 
-                "Никогда не сдаваться!" мой лозунг по жизни с какими бы трудностями не пришлось столкнуться.
             </div>
         </div>
     </section>
-<section class="works-skills container">
-    <div class="wrapper-content">
-        <div  class="wrapper-content__wrapper-title">
-            <h2 class="wrapper-content__title">НАВЫКИ</h2>
-            <img class="wrapper-content__img" src="./assets/svg/skills.svg" width="50" alt="icon skills">
-        </div>
-        <ul class="works-skills__list">
-            <li class="works-skills__skill">JavaScript</li>
-            <li class="works-skills__skill">TypeScript</li>
-            <li class="works-skills__skill">React</li>
-            <li class="works-skills__skill">Angular</li>
-            <li class="works-skills__skill">HTML</li>
-            <li class="works-skills__skill">CSS</li>
-            <li class="works-skills__skill">SCSS</li>
-            <li class="works-skills__skill">RxJs</li>
-            <li class="works-skills__skill">NgRx</li>
-            <li class="works-skills__skill">Webpack</li>
-            <li class="works-skills__skill">GIT</li>
-            <li class="works-skills__skill">Team Work</li>
-        </ul> 
+    <section class="works-skills container">
+        <div class="wrapper-content">
+            <div  class="wrapper-content__wrapper-title">
+                <h2 class="wrapper-content__title">НАВЫКИ</h2>
+                <img class="wrapper-content__img" src="./assets/svg/skills.svg" width="50" alt="icon skills">
+            </div>
+            <ul class="works-skills__list">
+                <li class="works-skills__skill">JavaScript</li>
+                <li class="works-skills__skill">TypeScript</li>
+                <li class="works-skills__skill">React</li>
+                <li class="works-skills__skill">Angular</li>
+                <li class="works-skills__skill">HTML</li>
+                <li class="works-skills__skill">CSS</li>
+                <li class="works-skills__skill">SCSS</li>
+                <li class="works-skills__skill">RxJs</li>
+                <li class="works-skills__skill">NgRx</li>
+                <li class="works-skills__skill">Webpack</li>
+                <li class="works-skills__skill">GIT</li>
+                <li class="works-skills__skill">Team Work</li>
+            </ul> 
+            <div  class="wrapper-content__wrapper-title">
+                <h2 class="wrapper-content__title">ЯЗЫКИ</h2>
+                <img class="wrapper-content__img" src="./assets/svg/language.svg" width="50" alt="icon skills">
+            </div>
+            <ul class="works-skills__list">
+                <li  class="works-skills__skill works-skills__skill_language">Английский (B2)</li>
+                <li  class="works-skills__skill works-skills__skill_language">Русский</li>
+            </ul>
 
-
-        <div  class="wrapper-content__wrapper-title">
-            <h2 class="wrapper-content__title">ЯЗЫКИ</h2>
-            <img class="wrapper-content__img" src="./assets/svg/language.svg" width="50" alt="icon skills">
-        </div>
-        <ul class="works-skills__list">
-            <li  class="works-skills__skill works-skills__skill_language">Английский (B2)</li>
-            <li  class="works-skills__skill works-skills__skill_language">Русский</li>
-        </ul>
-
-        <div class="wrapper-content__wrapper-title">
-            <h2 class="wrapper-content__title">ОПЫТ РАБОТЫ</h2>
-            <img class="wrapper-content__img" src="./assets/svg/work.svg" width="50" alt="icon works">
-        </div>
-        <ul class="works-skills__list works-skills__list_works">
-            <li>
-                <h3>Фрилансер / Frontend-разработчик</h3>
-                Было разработано несколько сайтов адаптированных под мобильные устройства, с использованием javascript, css, html.
-            </li>
-            <li>
-                август 2020
-                <h3>СБЕРБАНК / Специалист технической поддержки</h3>
-                Оказание консультации клиентам по продуктам компании, решение технических вопросов.
-            </li>
-            <li>
-                август 2018
-                <h3>ООО Келли Сервисез Си Ай Эс / Специалист технической поддержки</h3>
-                Оказание консультации клиентам по продуктам компании (модемы, роутеры), решение технических вопросов
-            </li>
-        </ul>
-    </div>
-    <div class="wrapper-content-white">
-        <div class="wrapper-content-white__wrapper-title">
-            <h2 class="wrapper-content-white__title">МОИ ПРОЕКТЫ</h2>
-            <img class="wrapper-content-white__img" src="./assets/svg/project.svg" width="50" alt="icon projects">
-        </div>
-        <div class="works-skills__wrapper-projects">
-            <ul class="works-skills__projects-list">
-                <li class="works-skills__project">
-                    <h2 class="works-skills__project-title">Shelter</h2>
-                    <a class="works-skills__project-link" href="https://laluna93.github.io/Shelter/dist/">
-                        <img class="works-skills__project-img" src="./assets/img/shelter320.jpg" alt="image shelter">
-                    </a>
-                    <h3 class="works-skills__project-text">TypeScritp, Webpack, Eslint</h3>
+            <div class="wrapper-content__wrapper-title">
+                <h2 class="wrapper-content__title">ОПЫТ РАБОТЫ</h2>
+                <img class="wrapper-content__img" src="./assets/svg/work.svg" width="50" alt="icon works">
+            </div>
+            <ul class="works-skills__list works-skills__list_works">
+                <li>
+                    <h3>Фрилансер / Frontend-разработчик</h3>
+                    Было разработано несколько сайтов адаптированных под мобильные устройства, с использованием javascript, css, html.
                 </li>
-                <li class="works-skills__project">
-                    <h2 class="works-skills__project-title">Youtube</h2>
-                    <a class="works-skills__project-link" href="">
-                        <img class="works-skills__project-img" src="./assets/img/youtube.jpg" alt="image youtube">
-                    </a>
-                    <h3 class="works-skills__project-text">Angular, TypeScritp, RXJS, NGRX, YouTube Data Api</h3>
+                <li>
+                    август 2020
+                    <h3>СБЕРБАНК / Специалист технической поддержки</h3>
+                    Оказание консультации клиентам по продуктам компании, решение технических вопросов.
                 </li>
-                <li class="works-skills__project">
-                    <h2 class="works-skills__project-title">Project Management</h2>
-                    <a class="works-skills__project-link" href="https://pomakom-rsteam.github.io/project-management-app-team2/">
-                        <img class="works-skills__project-img" src="./assets/img/project-manager.jpg" alt="image project management">
-                    </a>
-                    <h3 class="works-skills__project-text">Angular, TypeScritp, Angular Material, Ng-Zorro</h3>
+                <li>
+                    август 2018
+                    <h3>ООО Келли Сервисез Си Ай Эс / Специалист технической поддержки</h3>
+                    Оказание консультации клиентам по продуктам компании (модемы, роутеры), решение технических вопросов
                 </li>
             </ul>
         </div>
-    </div>
-</section>
-
-            <!-- <span class="header__text">Hi, my name is Anna</span>
-            <br>
-            I am an enthusiastic Frontend developer with little freelance experience, where I have developed several websites using static html layout, css, javascript. 
-            Basically, I get development experience by setting tasks for myself and completing them.
-            I also gained a lot of experience after studying at the RS school, at the frontend development course.
-            Worked on projects using javascript, typescript, angular, react.
-            Here I learned to understand someone else's code while working on team projects, which I consider a very important skill,
-            because I want to work in a team. 
-            I am a responsible person and I am serious about solving the tasks set for myself. 
-            "Never give up!" my slogan for life is no matter what difficulties you have to face.
-            <!-- я увлеченный Frontend разработчик, имеющий небольшой опыт работы во фрилансе, где разработала несколько сайтов с использованием статичной html верстки, css, javascript. 
-            В основном опыт разработки получаю ставя перед собой задачи и выполняя их.
-            Так же поулчила большой опыт после прохождения обучения в школе рс скул, на курсе по фронтенд разработки.
-            Работала над проектами используя javascript, typescript,  angular, react.
-            Здесь я научилась разбираться в чужом коде, работая над командными проектами, что считаю очень важным навыком,
-            так как хочу работать в команде. 
-            Я ответственный человек и серьезно подхожу к решению поставленных перед собой задач. 
-            "Никогда не сдаваться!" мой лозунг по жизни с какими бы трудностями не пришлось столкнуться. -->
-            <!-- </div>
-            </div> -->
-
+        <div class="wrapper-content-white">
+            <div class="wrapper-content-white__wrapper-title">
+                <h2 class="wrapper-content-white__title">МОИ ПРОЕКТЫ</h2>
+                <img class="wrapper-content-white__img" src="./assets/svg/project.svg" width="50" alt="icon projects">
+            </div>
+            <div class="works-skills__wrapper-projects">
+                <ul class="works-skills__projects-list">
+                    <li class="works-skills__project">
+                        <h2 class="works-skills__project-title">Shelter</h2>
+                        <a class="works-skills__project-link" href="https://laluna93.github.io/Shelter/dist/">
+                            <img class="works-skills__project-img" src="./assets/img/shelter320.jpg" alt="image shelter">
+                        </a>
+                        <h3 class="works-skills__project-text">TypeScritp, Webpack, Eslint</h3>
+                    </li>
+                    <li class="works-skills__project">
+                        <h2 class="works-skills__project-title">Youtube</h2>
+                        <a class="works-skills__project-link" href="https://laluna93.github.io/youtube-client/">
+                            <img class="works-skills__project-img" src="./assets/img/youtube.jpg" alt="image youtube">
+                        </a>
+                        <h3 class="works-skills__project-text">Angular, TypeScritp, RXJS, NGRX, YouTube Data Api</h3>
+                    </li>
+                    <li class="works-skills__project">
+                        <h2 class="works-skills__project-title">Project Management</h2>
+                        <a class="works-skills__project-link" href="https://pomakom-rsteam.github.io/project-management-app-team2/">
+                            <img class="works-skills__project-img" src="./assets/img/project-manager.jpg" alt="image project management">
+                        </a>
+                        <h3 class="works-skills__project-text">Angular, TypeScritp, Angular Material, Ng-Zorro</h3>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <script src="./index.js"></script>
 </body>
 
