feat: add information

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <div class="header__contact">
                 <div class="header__wrapper-contact">
                     <h3 class="header__title-contact">ТЕЛЕФОН</h3>
-                    +12345678
+                    +79879768182
                 </div>
                 <img class="header__img" src="./assets/svg/phone.svg" width="50" alt="icon phone">
             </div>
             <div class="header__contact">
                 <div class="header__wrapper-contact">
                     <h3 class="header__title-contact">ПОЧТА</h3>
-                    aaaa@mail.ru
+                    laluna-93@mail.ru
                 </div>
                 <img class="header__img" src="./assets/svg/mail.svg" width="50" alt="icon mail">
             </div>
@@ -66,16 +66,16 @@
         </div>
         <div class="wrapper-content-white">
             <div class="wrapper-content-white__wrapper-title">
-                <h2 class="wrapper-content-white__title">Обо мне</h2>
+                <h2 class="wrapper-content-white__title">ОБО МНЕ</h2>
                 <img class="wrapper-content-white__img" src="./assets/svg/profile.svg" width="50"  alt="icon person">
             </div>
             <div class="main__text">
                 <span class="main__text-start">Привет, меня зовут Анна</span>
                 <br>
-                я увлеченный Frontend разработчик, имеющий небольшой опыт работы на фрилансе, где разработала несколько сайтов с использованием статичной html верстки, css, javascript. 
+                я увлеченный Frontend разработчик, имеющий небольшой опыт работы на фрилансе, где разработала несколько сайтов с использованием статичной HTML верстки, CSS, JavaScript. 
                 В основном опыт разработки получаю ставя перед собой задачи и выполняя их.
                 Так же получила большой опыт после прохождения обучения в школе The Rolling Scopes School, на курсе JavaScript/Front-end.
-                Работала над проектами используя javascript, typescript,  angular, react.
+                Работала над проектами используя JavaScript, TypeScript,  Angular, React.
                 Здесь я научилась разбираться в чужом коде, работая над командными проектами, что считаю очень важным навыком,
                 так как хочу работать в команде. 
                 Я ответственный человек и серьезно подхожу к решению поставленных перед собой задач. 
@@ -151,7 +151,7 @@
                         <a class="works-skills__project-link" href="https://laluna93.github.io/youtube-client/">
                             <img class="works-skills__project-img" src="./assets/img/youtube.jpg" alt="image youtube">
                         </a>
-                        <h3 class="works-skills__project-text">Angular, TypeScritp, RXJS, NGRX, YouTube Data Api</h3>
+                        <h3 class="works-skills__project-text">Angular, TypeScritp, RXJS, NGRX, YouTube DATA API</h3>
                     </li>
                     <li class="works-skills__project">
                         <h2 class="works-skills__project-title">Project Management</h2>
