feat: add github

--- a/index.html
+++ b/index.html
@@ -162,9 +162,16 @@
                     </li>
                 </ul>
             </div>
+            <div class="wrapper-content-white__wrapper-github">
+                <div class="wrapper-content-white__wrapper-title">
+                    <h2 class="wrapper-content-white__title">МОЙ GITHUB</h2>
+                        <img class="wrapper-content-white__img" src="./assets/svg/github.svg" width="50" alt="icon github">
+                </div>
+                <div class="wrapper-content-white__github">
+                    <a class="wrapper-content-white__github-link" href="https://github.com/laluna93">GitHub</a>
+                </div>
+            </div>
         </div>
     </section>
-    <script src="./index.js"></script>
 </body>
-
 </html>
