--- a/cv/index.html
+++ b/cv/index.html
@@ -91,6 +91,7 @@
             <ul class="works-skills__list">
                 <li class="works-skills__skill">JavaScript</li>
                 <li class="works-skills__skill">TypeScript</li>
+                <li class="works-skills__skill">React</li>
                 <li class="works-skills__skill">Angular</li>
                 <li class="works-skills__skill">HTML</li>
                 <li class="works-skills__skill">CSS</li>
