refactor: corrected the name of the language in the projects

--- a/cv/index.html
+++ b/cv/index.html
@@ -144,21 +144,21 @@
                         <a class="works-skills__project-link" href="https://laluna93.github.io/Shelter/dist/">
                             <img class="works-skills__project-img" src="./assets/img/shelter320.jpg" alt="image shelter">
                         </a>
-                        <h3 class="works-skills__project-text">TypeScritp, Webpack, Eslint</h3>
+                        <h3 class="works-skills__project-text">TypeScritpt, Webpack, Eslint</h3>
                     </li>
                     <li class="works-skills__project">
                         <h2 class="works-skills__project-title">Youtube</h2>
                         <a class="works-skills__project-link" href="https://laluna93.github.io/youtube-client/">
                             <img class="works-skills__project-img" src="./assets/img/youtube.jpg" alt="image youtube">
                         </a>
-                        <h3 class="works-skills__project-text">Angular, TypeScritp, RXJS, NGRX, YouTube DATA API</h3>
+                        <h3 class="works-skills__project-text">Angular, TypeScritpt, RXJS, NGRX, YouTube DATA API</h3>
                     </li>
                     <li class="works-skills__project">
                         <h2 class="works-skills__project-title">Project Management</h2>
                         <a class="works-skills__project-link" href="https://pomakom-rsteam.github.io/project-management-app-team2/">
                             <img class="works-skills__project-img" src="./assets/img/project-manager.jpg" alt="image project management">
                         </a>
-                        <h3 class="works-skills__project-text">Angular, TypeScritp, Angular Material, Ng-Zorro</h3>
+                        <h3 class="works-skills__project-text">Angular, TypeScritpt, Angular Material, Ng-Zorro</h3>
                     </li>
                 </ul>
             </div>
